[package]
name = "wx-work"
version = "0.1.0"
authors = ["nooberfsh <nooberfsh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha-1 = "0.8"
base64 = "0.12"
thiserror = "1.0"
byteorder = "1"
xmltree = "0.10"
log = "0.4"
actix-web = "2"
actix-rt = "1"
async-trait = "0.1"
futures = "0.3"
rand = "0.7"
anyhow = "1.0"
block-modes = "0.3"
aes = "0.3"
hex = "0.4"
itertools = "0.9"
serde_json = "1.0"
reqwest = { version = "0.10" , features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
dotenv = "0.15"
env_logger = "0.7"
