[package]
name = "wx-work"
version = "0.2.0"
authors = ["nooberfsh <nooberfsh@gmail.com>"]
edition = "2018"
description = "企业微信 sdk"
license = "MIT"
repository = "https://github.com/nooberfsh/wx-work"
homepage = "https://github.com/nooberfsh/wx-work"
documentation = "https://docs.rs/wx-work"
keywords = ["weixin"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
byteorder = "1"
xmltree = "0.10"
log = "0.4"
rand = "0.7"
anyhow = "1.0"
hex = "0.4"
itertools = "0.9"
# crypto
block-modes = "0.3"
sha-1 = "0.8"
base64 = "0.12"
aes = "0.3"
# serde
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
# network dependencies
tokio = { version = "1.6", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "blocking", "multipart"]}
async-trait = "0.1"
futures = "0.3"
actix-web = "4.0.0-beta.6"


[dev-dependencies]
dotenv = "0.15"
env_logger = "0.7"
